# Borysov_nosql_2

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: 01_prepare_data_output.txt  02_embed_output.txt  03_load_to_pinecone_output.txt  04_search_output.txt  05_chunking_output.txt  06_hybrid_search_output.txt
scripts/: 01_prepare_data.py  02_embed.py  03_load_to_pinecone.py  04_search.py  05_chunking.py  06_hybrid_search.py
